cmake_minimum_required(VERSION 2.8.4)
project("DataHelper")

set(CMAKE_CXX_FLAGS "-std=c++11 -fPIC")
set(CMKAE_C_FLAGS "-std=c++11 -fPIC")

find_package(Threads)
set(BASELIB_HEAD "${PROJECT_SOURCE_DIR}/../BaseLib/" CACHE INTERNAL "BaseLib Header_file localtion")
set(BASELIB_LIBRARY "${PROJECT_SOURCE_DIR}/../BaseLib/lib" CACHE INTERNAL "BaseLib Header_file localtion")

IF(WIN32)
set(BASELIB_LIBRARY "${PROJECT_SOURCE_DIR}/../BaseLib/lib" CACHE INTERNAL "BaseLib Header_file localtion")
ENDIF()

include_directories(${BASELIB_HEAD} ./mysql/include)
link_directories(${BASELIB_LIBRARY} ./mysql/lib)

include_directories(${BASELIB_HEAD} ./libevent/include)
link_directories(${BASELIB_LIBRARY} ./libevent/lib)

include_directories(. Src)
aux_source_directory(Src DIR_SRCS)
include_directories(common)
aux_source_directory(common DIR_COMMON)

include_directories(client)
#add_subdirectory(client)
aux_source_directory(client DIR_CLIENT)

include_directories(server)
#add_subdirectory(server)
aux_source_directory(server DIR_SERVER)


option (DATAHELPER "compile DateHelper" OFF)
option (CLIENT "compile client" ON)
option (SERVER "compile server" OFF)

IF(DATAHELPER)
add_executable(DataHelper main.cpp ${DIR_SRCS} ${DIR_COMMON})
target_link_libraries(DataHelper hrRobotPub)
target_link_libraries(DataHelper BaseLib)
target_link_libraries(DataHelper libmysql)
target_link_libraries(DataHelper ${CMAKE_THREAD_LIBS_INIT})
ENDIF()#endif(DATAHELPER)

IF(CLIENT)
add_definitions("-D__CLIENT")
add_executable(client clientMain.cpp ${DIR_CLIENT}  ${DIR_COMMON})
target_link_libraries(client hrRobotPub)
target_link_libraries(client BaseLib)
IF(WIN32)
#target_link_libraries(client libmysql)
target_link_libraries(client ws2_32)
ELSE()
target_link_libraries(client event_pthreads)
ENDIF()
target_link_libraries(client event)
target_link_libraries(client event_core)
target_link_libraries(client event_extra)
target_link_libraries(client ${CMAKE_THREAD_LIBS_INIT})
ENDIF()#endif(CLIENT)

IF(SERVER)
add_definitions("-D__SERVER")
#add_executable(server serverMain.cpp ${DIR_SERVER} ${DIR_COMMON}  ${DIR_SRCS})
add_library(server SHARED serverMain.cpp ${DIR_SERVER} ${DIR_COMMON}  ${DIR_SRCS})
target_link_libraries(server hrRobotPub)
target_link_libraries(server BaseLib)
target_link_libraries(server event)
target_link_libraries(server event_core)
target_link_libraries(server event_extra)
IF(WIN32)
target_link_libraries(server libmysql)
target_link_libraries(server ws2_32)
ELSE()
target_link_libraries(server event_pthreads)
ENDIF()
target_link_libraries(server ${CMAKE_THREAD_LIBS_INIT})
ENDIF()#endif(SERVER)

